@@ -1,5 +1,12 @@
 1999-09-14  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>
 
+	* configure.in: Get snapshot date from SNAPSHOT file, if it exists.
+	(VERSION): Add the date to it.
+	(SNAPSHOT_STAMP): AC_SUBST to the SNAPSHOT file, if it exists.
+	* Makefile.am (EXTRA_DIST): Added $(SNAPSHOT_STAMP).
+	(config.status): Depend on $(SNAPSHOT_STAMP).
+	(SNAPSHOT): Dummy rule to allow reconfigure if it's removed.
+
 	* config/Makefile.am: Remove all traces of acconfig.h.
 
 	* server-src/changer.c (changer_command): Fix for amwait_t != int.
@@ -402,7 +409,7 @@
 	* changer-src/scsi-aix.c: (SCSI_ExecuteCommand) Add missing
 	parameter to DecodeExtSense.
 
-	* changer-src/scsi-hpux.c: Added static char rcsid[] = "$Id: ChangeLog,v 1.205.2.271 1999/09/14 05:38:03 oliva Exp $";
+	* changer-src/scsi-hpux.c: Added static char rcsid[] = "$Id: ChangeLog,v 1.205.2.272 1999/09/14 05:40:25 oliva Exp $";
 	* changer-src-/chg-scsi.c: dito
 	* changer-src/scsi-changer-driver.c: dito
 
